[package]
name = "quarantine"
version = "0.1.0"
edition = "2021"
authors = ["zahash <zahash.z@gmail.com>"]
description = "quarantine"
license = "MIT"
repository = "https://github.com/zahash/quarantine/"

[dependencies]
anyhow = "1"
bollard = "0.17"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
