[package]
name = "quarantine"
version = "0.1.2"
edition = "2021"
authors = ["zahash <zahash.z@gmail.com>"]
description = "quarantine"
license = "MIT"
repository = "https://github.com/zahash/quarantine/"

[dependencies]
anyhow = "1"
bollard = "0.17"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true        # Enable Link Time Optimization (LTO)
codegen-units = 1 # Forces the compiler to use a single code generation unit to improve optimizations
